objects/vtse__Stand_Deliver_Submission__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vtse__Average_Feedback_Score__c</fullName>
        <label>Average Feedback Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vtse__Media__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media</label>
        <referenceTo>scormanywhere__Course__c</referenceTo>
        <relationshipLabel>Stand and Deliver Submissions</relationshipLabel>
        <relationshipName>Stand_Deliver_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Number_Of_Reviews__c</fullName>
        <label>Number Of Reviews</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vtse__Stand_Deliver_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stand and Deliver Task</label>
        <referenceTo>vtse__Stand_Deliver_Task__c</referenceTo>
        <relationshipLabel>Stand and Deliver Submissions</relationshipLabel>
        <relationshipName>Stand_Deliver_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vtse__Submitted_On__c</fullName>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vtse__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Stand and Deliver Submissions</relationshipLabel>
        <relationshipName>Stand_Deliver_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stand and Deliver Submission</label>
    <nameField>
        <displayFormat>SDS-{0}</displayFormat>
        <label>Stand and Deliver Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stand and Deliver Submissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>